# site-delta

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build-pi.sh  upload.sh
404/: index.html
makeavoy-assets/: petsite.xcf
makeavoy-package/: package-lock.json  package.json  tsconfig.json  webpack.config.js
makeavoy-package/src/: Background.ts  Cursor.ts  Helper.ts  Main.ts  NavLine.ts  Online.ts  RasterTool.ts  Render.ts  SceneManager.ts  Shaper.ts  ShimmerMaterial.ts  Signature.ts  System.ts  UI.ts  about.html  app.type.ts  index.html
makeavoy-package/src/apps/: About.ts  Blog.ts  Chat.ts  Color.ts  Data.ts  Monitor.ts  Punk.ts  Room.ts  Skyland.ts
makeavoy-package/src/assets/: about.aseprite  access.aseprite  blog.aseprite  brightness.aseprite  chat.aseprite  code.aseprite  data.aseprite  dither1.aseprite  edit.aseprite  home.aseprite  monitor  monitor.aseprite  room.aseprite  skull.aseprite
makeavoy-package/src/style/: aboutStyle.css  app.scss  blog.scss  container.scss  cursor.scss  mainStyle.css  mainStyle.scss  ui.scss
makeavoy-package/src/types/: App.ts  AppEnvironment.ts  AppShell.ts  BarContainer.ts  Container.ts  FolderContainer.ts  WindowContainer.ts
petrichor-package/: index.html  package-lock.json  package.json  vite.config.ts
petrichor-package/public/: down.aseprite  download.aseprite  info.aseprite  search.aseprite  smui.css  tile-dark.aseprite  tile.aseprite
petrichor-package/public/assets/: up.aseprite
petrichor-package/src/: App.svelte  app.scss  main.ts
petrichor-templates/: commands.md
src/: main.rs
(+14 files in other folders)
