[package]
name = "site-delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum="0.6.4"
tokio={version="1.25.0", features= ["full" ]}
tower="0.4.13"
tower-http={version="0.3.5", features=["fs"]}
include_dir="0.7.3"
mime_guess="2.0.4"